--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.7",
-    "@radix-ui/react-dialog": "^1.1.11",
-    "@radix-ui/react-label": "^2.1.4",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-tabs": "^1.1.9",
+    "@radix-ui/react-dialog": "^1.1.12",
+    "@radix-ui/react-label": "^2.1.5",
+    "@radix-ui/react-separator": "^1.1.5",
+    "@radix-ui/react-slot": "^1.2.1",
+    "@radix-ui/react-tabs": "^1.1.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.507.0",
