--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@radix-ui/react-dialog": "^1.1.12",
     "@radix-ui/react-label": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.5",
-    "@radix-ui/react-slot": "^1.2.1",
+    "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "react": "^19.0.0",
